--- a/.github/workflows/ansible/deploy_applications.yml
+++ b/.github/workflows/ansible/deploy_applications.yml
@@ -1,5 +1,5 @@
 ---
-- name: "configuration play."
+- name: "Deploy applications"
   hosts: web
   user: ubuntu
   become: true
@@ -9,11 +9,9 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
 
-    - mlflow_image_name: vectornguyen76/mlflow
-    - mlflow_tag_name: latest
+    - api_image_image: vectornguyen76/flask_template_image
+    - api_image_tag: latest
 
-    - model_predictor_image_name: vectornguyen76/model_predictor
-    - model_predictor_tag_name: latest
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
@@ -34,6 +32,7 @@
           - python3-pip
           - virtualenv
           - python3-setuptools
+          - unzip
         state: latest
         update_cache: true
 
