--- a/.github/workflows/development_pipeline.yml
+++ b/.github/workflows/development_pipeline.yml
@@ -1,7 +1,8 @@
 name: development
 on:
   pull_request:
-    branches: develop
+    branches:
+      - develop
 
   push:
     branches:
@@ -21,23 +22,25 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Cache Python dependencies
-        uses: actions/cache@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
+          python-version: "3.9"
+          cache: "pip"
 
       - name: Install Python dependencies
         run: python -m pip install -r requirements.txt
+
+      - name: Run isort
+        run: isort --check-only --profile=black .
+
+      - name: Run black
+        run: black --check .
+
+      - name: Run flake8
+        run: flake8 --ignore=E501,W503,F401 .
 
       - name: Unit Tests and Integration Tests
         env:
